--- a/2_eyes_on_the_telescope.html
+++ b/2_eyes_on_the_telescope.html
@@ -298,7 +298,7 @@
 <p><span style="font-size: 14pt;">Tu tienes misión:</span></p>
 <h3><span style="font-size: 14pt;"><img src="planificar.png" alt="Personaje planificando un recorrido en una pizarra escolar" title="Planificar" width="125" height="125">To plan a space trip.</span></h3>
 <p><span style="font-size: 14pt;">Planificar un viaje espacial.</span></p>
-<h3><img src="crear.png" alt="Manos construyendo algo. " title="Elaborar" width="125" height="125">To create a space base.</h3>
+<h3><span style="font-size: 14pt;"><img src="crear.png" alt="Manos construyendo algo. " title="Elaborar" width="125" height="125">To create a space base.</span></h3>
 <p><span style="font-size: 14pt;">Crear una base espacial</span></p>
 <h3><span style="font-size: 14pt;">A space base is a place where astronauts live and work.</span></h3>
 <p><span style="font-size: 14pt;">Una base espacial es un lugar donde los astronautas viven y trabajan. </span></p>
@@ -604,6 +604,7 @@
 <p><span style="font-size: 14pt;">El Sol es blanco</span></p>
 <h3><span style="font-size: 14pt;"><img src="Sol.png" alt="Pictograma del Sol" title="Sun" width="125" height="125"><img src="mover.png" alt="Pictograma de mover" title="Mover" width="125" height="125">The Sun moves around the galaxy</span></h3>
 <p><span style="font-size: 14pt;">El Sol se mueve alrededor de la galaxia</span></p>
+
 </div><button class="exe-udlContent-alt-content-hide">Cerrar</button></article><article class="exe-udlContent-content-audio js-hidden"><header class='exe-udlContent-alt-content-title'><h2>Audio</h2></header><p><audio style="display: block; margin-left: auto; margin-right: auto;" controls="controls" src="AUD_ING5PRI_REA05_RETOR_CHARLIE_V01.mp3" class="mediaelement"><a href="AUD_ING5PRI_REA05_RETOR_CHARLIE_V01.mp3">audio/mpeg</a></audio></p><button class="exe-udlContent-alt-content-hide">Cerrar</button></article></div></section></div>
 </div>
 </div>
