--- a/42_everythings_spinning.html
+++ b/42_everythings_spinning.html
@@ -282,7 +282,7 @@
 <p>The Moon rotates on its own axis. It also <strong>takes 28 days</strong> to complete one rotation.</p>
 <p>The Moon’s <strong>orbit</strong> and <strong>rotation</strong> take the same amount of time.</p>
 <p>The Moon looks different depending on where it is in the sky. These changes are called the <strong>lunar phases </strong>and it causes <strong>the <a href="#taa51bf95-eebc-644d-cf13-bd73e9d1131c" id="linkaa51bf95-eebc-644d-cf13-bd73e9d1131c" class="exe-tooltip definition-tt titled-tt" title="Tide | Definición de tide">tides</a>.</strong></p>
-<p><a href="Lunar_phases.gif" rel="lightbox"><img src="Lunar_phases.gif" alt="La Luna girando" title="Lunar phases" width="283" height="283" style="vertical-align: middle; float: left;"></a><a href="Lunar_phases.png" rel="lightbox"><img src="Lunar_phases.png" alt="La imagen muestra cuatro lunas según sus fases: Full moon, waning moon, waxing moon, new moon" title="Lunar phases" width="500" height="281" style="float: left;"></a></p>
+<p><a href="Lunar_phases_.gif" rel="lightbox"><img src="Lunar_phases_.gif" alt="La Luna girando" title="Lunar phases" width="283" height="283" style="vertical-align: middle; float: left;"></a><a href="Lunar_phases.png" rel="lightbox"><img src="Lunar_phases.png" alt="La imagen muestra cuatro lunas según sus fases: Full moon, waning moon, waxing moon, new moon" title="Lunar phases" width="500" height="281" style="float: left;"></a></p>
 <h2>The Earth and the Moon - Video</h2>
 <p><iframe width="600" height="350" style="display: block; margin-left: auto; margin-right: auto;" src="https://www.youtube.com/embed/xsJlzHV21uM" allowfullscreen="allowfullscreen"></iframe><br><br><br></p>
 <p style="text-align: center;"><a href="SUB_CMN5PRI_REA01_ROTATION_REVOLUTION_V01.txt" target="_blank" rel="noopener">Click here </a>to download the subtitles of the video</p>
@@ -410,7 +410,7 @@
 <p><span style="font-size: 14pt;">Tú utiliza las muletillas para ayudarte.</span></p>
 </div><button class="exe-udlContent-alt-content-hide">Cerrar</button></article><article class="exe-udlContent-content-audio js-hidden"><header class='exe-udlContent-alt-content-title'><h2>Audio</h2></header><p><audio style="display: block; margin-left: auto; margin-right: auto;" controls="controls" src="AUD_CMN5PRI_REA01_RETOR_3_FASE4_2_V01.mp3" class="mediaelement"><a href="AUD_CMN5PRI_REA01_RETOR_3_FASE4_2_V01.mp3">audio/mpeg</a></audio></p><button class="exe-udlContent-alt-content-hide">Cerrar</button></article></div></section><section class="exe-udlContent-block"><div class="exe-udlContent-content"><div class="exe-udlContent-content-main"><div class="exe-fx exe-carousel">
 <h2>Picture 1</h2>
-<p style="text-align: center;"><a href="Lunar_phases.gif" rel="lightbox"><img src="Lunar_phases.gif" alt="La Luna girando y mostrando diferentes caras" title="Lunar phases" width="250" height="250"></a></p>
+<p style="text-align: center;"><a href="Lunar_phases_.gif" rel="lightbox"><img src="Lunar_phases_.gif" alt="La Luna girando y mostrando diferentes caras" title="Lunar phases" width="250" height="250"></a></p>
 <h2>Picture 2</h2>
 <p style="text-align: center;"><a href="Rotate.gif" rel="lightbox"><img src="Rotate.gif" alt="La Tierra rotando" title="Rotation" width="250" height="250"></a></p>
 <h2>Picture 3</h2>
@@ -704,6 +704,7 @@
 <p>Tú escribe la descripción de la Tierra y la Luna.</p>
 <h3><img src="presentar_(1).png" alt="Persona exponiendo oralmente" title="Exponer" width="125" height="125">Present orally your description.</h3>
 <p>Tú presenta oralmente tu descripción.</p>
+
 </div><button class="exe-udlContent-alt-content-hide">Cerrar</button></article><article class="exe-udlContent-content-audio js-hidden"><header class='exe-udlContent-alt-content-title'><h2>Audio</h2></header><p style="text-align: center;"><audio controls="controls" src="AUD_CMN5PRI_REA01_RETOR_4_FASE4_2_V01.mp3" class="mediaelement"><a href="AUD_CMN5PRI_REA01_RETOR_4_FASE4_2_V01.mp3">audio/mpeg</a></audio></p><button class="exe-udlContent-alt-content-hide">Cerrar</button></article></div></section></div>
 </div>
 </div>
