--- a/7_credits.html
+++ b/7_credits.html
@@ -729,7 +729,7 @@
 </div>
 <div class="exe-layout-3-cols exe-clear">
 <div class="exe-col exe-col-1">
-<figure class="exe-figure exe-image position-center license-custom" style="width: 200px;"><img src="Lunar_phases.gif" alt="La luna mostrando las diferentes fases según el foco de luz que le llega del sol" title="Lunar phases" width="200" height="200">
+<figure class="exe-figure exe-image position-center license-custom" style="width: 200px;"><img src="Lunar_phases_.gif" alt="La luna mostrando las diferentes fases según el foco de luz que le llega del sol" title="Lunar phases" width="200" height="200">
 <figcaption class="figcaption"><a href="https://commons.wikimedia.org/w/index.php?title=User:Poopooman-ger&amp;action=edit&amp;redlink=1" target="_blank" class="author" rel="noopener">Poopooman-ger</a>. <a href="https://commons.wikimedia.org/wiki/File:Lunar_libration_with_phase_Oct_2007_HD.gif" target="_blank" class="title" rel="noopener"><em>Lunar phases</em></a> <span class="license"><span class="sep">(</span><span class="custom-license"><span class="sep">Wikimedia Commons -&nbsp;</span><a href="http://creativecommons.org/publicdomain/zero/1.0/deed.es" rel="license nofollow noopener" target="_blank" title="Creative Commons (CC0)">CC0</a></span><span class="sep">)</span></span></figcaption>
 </figure>
 </div>
@@ -944,6 +944,7 @@
 </tr>
 </tbody>
 </table>
+
 <p></p></div>
 </div>
 </div>
